--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,8 @@ Metrics/ClassLength:
 Metrics/BlockLength:
   ExcludedMethods: ['describe']
   Max: 30
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
 Metrics/CyclomaticComplexity:
   Enabled: false
 Metrics/PerceivedComplexity:
